# Chemical-Calculations

./: .env  .gitignore  ARCHITECTURE.md  Front.py  MIGRATION.md  REFACTORING_SUMMARY.md  main.py  pyproject.toml  pyvenv.cfg  setup.py
chemical_calculations.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
db/: main_database.db
foundation/: basis.py
maths/: calc.py  functions.py  methods.py
screens/: addExperimentWindow.py  attemptWidget.py  experimentInfoDialog.py  filtersDialog.py  importExperimentDialog.py  mainWindow.py  modelDialog.py
src/: main.py
src/calculation/: function.py  optimizer.py
src/chemical_calculations.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/core/: config.py
src/domain/: models.py
src/infrastructure/: database.py  repositories.py
src/services/: calculation_service.py  import_service.py  search_service.py
src/ui/: main_window.py
src/ui/dialogs/: experiment_info_dialog.py  import_dialog.py  model_dialog.py
src/ui/widgets/: calculation_widget.py
storage/: from_file_imports.py
ui/: AddExperimentWindow.ui  ArticlesDialog.ui  AttemptWidget.ui  CalcWindow.ui  CalculateDialog.ui  FindExperimentWindow.ui  ModelDialog.ui  UiForChem.ui  experimentInfoDialog.ui
